WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280651
[iOS] Unable to keyboard scroll until interacting with a webpage
https://bugs.webkit.org/show_bug.cgi?id=280651
Summary
[iOS] Unable to keyboard scroll until interacting with a webpage
Abrar Rahman Protyasha
Reported
2024-09-30 16:14:17 PDT
rdar://137004739
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-09-30 16:22:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34475
EWS
Comment 2
2024-10-01 09:17:13 PDT
Committed
284489@main
(e0ab58e09065): <
https://commits.webkit.org/284489@main
> Reviewed commits have been landed. Closing PR #34475 and removing active labels.
EWS
Comment 3
2024-10-01 14:26:18 PDT
Committed
283286.171@safari-7620-branch
(f4ba01e5ff8e): <
https://commits.webkit.org/283286.171@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1950 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug