[iOS] Unable to keyboard scroll until interacting with a webpage https://bugs.webkit.org/show_bug.cgi?id=280651 rdar://137004739

Reviewed by Wenson Hsieh.

This patch mostly re-lands 282736@main, except that we limit our change
from visionOS, where adoption of UIFocusItemDeferralModeNever regresses
Safari's address bar experience -- rdar://136769319.

* Source/WTF/wtf/PlatformHave.h:
* Source/WebKit/Platform/spi/ios/UIKitSPI.h:
* Source/WebKit/UIProcess/ios/WKContentView.mm:
(-[WKContentView focusItemDeferralMode]):

Canonical link: https://commits.webkit.org/284489@main